# challenge3-data-science

./: README.md  pyproject.toml
notebooks/: 01_telecom_x_ml.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
